--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -48,27 +48,15 @@
                 <li>
                     <a href="/users/logout">로그아웃</a>
                 </li>
-                {{/loginedUser}}
                 <li>
                     <a href="#">
                         마이페이지
                         <i class="bm-icon spr-bullet-arrow-down black"></i>
                     </a>
                 </li>
-                <li>
-                    <a href="#">
-                        고객센터
-                        <i class="bm-icon spr-bullet-arrow-down black"></i>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">새벽배송 지역검색</a>
-                </li>
-                <li>
-                    <a href="#">이벤트 게시판</a>
-                </li>
+                {{/loginedUser}}
                 <li class="cart">
-                    <a href="#">
+                    <a href="/cart">
                         <strong>장바구니</strong>
                     </a>
                 </li>
@@ -79,17 +67,9 @@
     <header id="header">
         <h3 class="blind">주요 메뉴 및 검색</h3>
 
-        <a class="logo" href="#">
+        <a class="logo" href="/">
             <img src="/img/logo-main.png" alt="배민찬 - 모바일 넘버원 반찬가게" />
         </a>
-
-        <form class="search-form" action="/" method="get">
-            <label for="searching_text" class="blind">검색</label>
-            <input type="text" name="searching_text" id="searching_text" />
-            <button type="submit">
-                <span>검색</span>
-            </button>
-        </form>
 
         <ul class="favorite-menu">
             <li>
