doc: update ui requirements

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -162,6 +162,9 @@
                         </div>
                     </div>
                 </div>
+                <div class="btn-area cart">
+                    <a href="/order" class="btn_mint btn_order" id="btn_select_receipt_date">결제하기</a>
+                </div>
             </div>
         </div>
     </div>
