--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -128,7 +128,7 @@
                                     <span class="unit">개</span>
                                 </strong>
                             </p>
-                            <a href="/shop/cart_sub.php" id="go_to_cart" class="go_to_basket">장바구니 이동
+                            <a href="/cart" id="go_to_cart" class="go_to_basket">장바구니 이동
                                 <span>&gt;</span>
                             </a>
                         </div>
