--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -72,7 +72,8 @@
                                 </dd>
                                 <dd class="prd_to_basket">
                                     <div class="prd_account clearfix">
-                                        <label><input class="buy_cnt" type="text" name="amount" value="1" data-name="{{title}}" data-no="17435" data-price="" data-hash="H62C9" data-min="1" data-max="-1"></label>
+                                        <label>
+                                            <input class="buy_cnt" type="text" name="amount" value="1" data-name="{{title}}" data-no="17435" data-price="" data-hash="H62C9" data-min="1" data-max="-1"></label>
                                         <span>
                                             <a href="#" title="수량 더하기" class="up">수량 더하기</a>
                                             <a href="#" title="수량 빼기" class="down">수량 빼기</a>
@@ -108,4 +109,8 @@
             </div>
         </div>
     </div>
+{{/block}}
+{{#block "footer"}}
+<script src="/js/main.js"></script>
+<script src="/js/cart.js"></script>
 {{/block}}
