장바구니 담기 프론트, 서버 구현

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1512,3 +1512,20 @@ a:focus {
   width: 250px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
+
+/**
+ *  커스텀 css
+ */
+
+/** ================================================
+  page - products
+================================================ */
+.invisible{
+  display: none !important;
+}
+
+.opacity-none{
+  opacity: 0;
+  transition: opacity 0.5s;
+}
+
