feat: Implement session based Cart
- Implement adding item to cart
- Add LoginUser annotation
- Add RestResponse

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -24,7 +24,7 @@
 
                     <div id="app" class="content">
                         {{#product}}
-                        <div class="product_detail_top clearfix">
+                        <div class="product_detail_top clearfix" data-id="{{id}}">
                             <div class="detail_top_image">
                                 <div class="image_top">
                                     <img src="{{imgUrl}}" alt=""
