--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -15,6 +15,7 @@
                     <br>장바구니를 업데이트 중입니다.
                     <br>잠시만 기다려 주십시오.</span>
             </div>
+            {{#cart}}
             <div id="cart">
                 <h2 class="cart_tlt">장바구니</h2>
 
@@ -53,6 +54,7 @@
 
                             <tr class="cart_prd_list" cart_no="12585780" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
                                 data-delivery-limit="2018-07-19~2018-08-15">
+                                {{#cartItems}}
                                 <td>
                                     <label class="custom_checkbox on">
                                         <i class="chk_box"></i>
@@ -61,12 +63,12 @@
                                 </td>
                                 <td class="thumb">
                                     <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">
-                                        <img src="https://cdn.bmf.kr/_data/product/I9D6D/88bd9878ff327da7adc71a9f81e3488b.jpg">
+                                        <img src="{{product.imgUrl}}">
                                     </a>
                                 </td>
                                 <td class="left">
                                     <p class="title prd_name">
-                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">[집밥의완성] 공심채볶음 170g</a>
+                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">{{product.title}}</a>
                                     </p>
                                     <p class="soldout bf_red" style="display: none;">
                                         <strong class="soldout-text"></strong>
@@ -80,11 +82,11 @@
                                     </p>
                                 </td>
                                 <td>
-                                    <span cartdata="" id="productPrice">5,200</span>원</td>
+                                    <span cartdata="" id="productPrice">{{product.price}}</span>원</td>
                                 <td>
                                     <div class="prd_account">
                                         <label>
-                                            <input type="number" class="buy_cnt" min="1" max="999" value="4" data-quantity="4"
+                                            <input type="number" class="buy_cnt" min="1" max="999" value="{{count}}" data-quantity="{{count}}"
                                                 formnovalidate="">
                                         </label>
                                         <span>
@@ -103,7 +105,7 @@
                                     <a class="ico-delete delete_cart_item" style="cursor:pointer">삭제</a>
                                 </td>
                             </tr>
-
+                            {{/cartItems}}
                         </tbody>
                     </table>
 
@@ -162,6 +164,7 @@
                         </div>
                     </div>
                 </div>
+                {{/cart}}
                 <div class="btn-area cart">
                     <a href="/order" class="btn_mint btn_order" id="btn_select_receipt_date">결제하기</a>
                 </div>
