--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -23,6 +23,7 @@
                     <input type="hidden" name="extend_mode" value="subscription">
 
                     <table class="tb_order_style cart">
+
                         <colgroup>
                             <col width="30px">
                             <col width="70px">
@@ -49,6 +50,7 @@
                                 <th>&nbsp;</th>
                             </tr>
                         </thead>
+                        {{#items}}
                         <tbody>
 
                             <tr class="cart_prd_list" cart_no="12585780" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
@@ -61,30 +63,25 @@
                                 </td>
                                 <td class="thumb">
                                     <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">
-                                        <img src="https://cdn.bmf.kr/_data/product/I9D6D/88bd9878ff327da7adc71a9f81e3488b.jpg">
+                                        <img src="{{imgUrl}}">
                                     </a>
                                 </td>
                                 <td class="left">
                                     <p class="title prd_name">
-                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">[집밥의완성] 공심채볶음 170g</a>
+                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">{{description}}</a>
                                     </p>
                                     <p class="soldout bf_red" style="display: none;">
                                         <strong class="soldout-text"></strong>
                                     </p>
 
-                                    <p class="cartItemMessage bf_red" style="display: none;"></p>
-                                    <p class="receipt_limit bf_red" style="">
-                                        배송 가능일이 한정되어 있는 상품입니다.
-                                        <strong class="limit-date">
-                                            <br>2018-07-19~2018-08-15</strong>
-                                    </p>
+
                                 </td>
                                 <td>
-                                    <span cartdata="" id="productPrice">5,200</span>원</td>
+                                    <span cartdata="" id="productPrice">{{price}}</span>원</td>
                                 <td>
                                     <div class="prd_account">
                                         <label>
-                                            <input type="number" class="buy_cnt" min="1" max="999" value="4" data-quantity="4"
+                                            <input type="number" class="buy_cnt" min="1" max="999" value="{{itemCount}}" data-quantity="4"
                                                 formnovalidate="">
                                         </label>
                                         <span>
@@ -95,7 +92,7 @@
                                     <button type="button" class="btn btn_white quantity_change_confirm">변경</button>
                                 </td>
                                 <td>
-                                    <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice">20,800</span>원</td>
+                                    <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice">{{price}}</span>원</td>
                                 <td>
                                     <span class="once_only bf_red">정기배송 불가</span>
                                 </td>
@@ -105,7 +102,9 @@
                             </tr>
 
                         </tbody>
+                        {{/items}}
                     </table>
+
 
                     <div class="btn-area">
                         <button id="delete_select" type="button" class="btn btn_white btn-select-delete">선택상품 삭제</button>
