Partially completed task
did not implement logging for cart activities

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -4,6 +4,14 @@
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/static/css/app.v-e740bdcc.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/web/css/magnific-popup/magnific-popup_1.0.1.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/web/css/jquery-ui/1.11.4/jquery-ui.151106.min.css">
+
+<script src="/js/main.js"></script>
+<script src="/js/cart.js"></script>
+
+<script type="text/javascript">
+    {{precompile "precompile/cart_item_template"}}
+
+</script>
 {{/block}}
 
 {{#block "contents"}}
@@ -51,58 +59,7 @@
                         </thead>
                         <tbody>
 
-                            <tr class="cart_prd_list" cart_no="12585780" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
-                                data-delivery-limit="2018-07-19~2018-08-15">
-                                <td>
-                                    <label class="custom_checkbox on">
-                                        <i class="chk_box"></i>
-                                        <input type="checkbox" name="cart_select" class="bf hidden_chk">
-                                    </label>
-                                </td>
-                                <td class="thumb">
-                                    <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">
-                                        <img src="https://cdn.bmf.kr/_data/product/I9D6D/88bd9878ff327da7adc71a9f81e3488b.jpg">
-                                    </a>
-                                </td>
-                                <td class="left">
-                                    <p class="title prd_name">
-                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">[집밥의완성] 공심채볶음 170g</a>
-                                    </p>
-                                    <p class="soldout bf_red" style="display: none;">
-                                        <strong class="soldout-text"></strong>
-                                    </p>
 
-                                    <p class="cartItemMessage bf_red" style="display: none;"></p>
-                                    <p class="receipt_limit bf_red" style="">
-                                        배송 가능일이 한정되어 있는 상품입니다.
-                                        <strong class="limit-date">
-                                            <br>2018-07-19~2018-08-15</strong>
-                                    </p>
-                                </td>
-                                <td>
-                                    <span cartdata="" id="productPrice">5,200</span>원</td>
-                                <td>
-                                    <div class="prd_account">
-                                        <label>
-                                            <input type="number" class="buy_cnt" min="1" max="999" value="4" data-quantity="4"
-                                                formnovalidate="">
-                                        </label>
-                                        <span>
-                                            <a title="수량 더하기" role="increase" class="up quantity_change">수량 더하기</a>
-                                            <a title="수량 빼기" role="decrease" class="down quantity_change">수량 빼기</a>
-                                        </span>
-                                    </div>
-                                    <button type="button" class="btn btn_white quantity_change_confirm">변경</button>
-                                </td>
-                                <td>
-                                    <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice">20,800</span>원</td>
-                                <td>
-                                    <span class="once_only bf_red">정기배송 불가</span>
-                                </td>
-                                <td>
-                                    <a class="ico-delete delete_cart_item" style="cursor:pointer">삭제</a>
-                                </td>
-                            </tr>
 
                         </tbody>
                     </table>
@@ -154,8 +111,7 @@
                                 <dd>
                                     <span class="number" pricedata="" id="totalPrice">23,300</span>
                                     <span class="won">원</span>
-                                    <p class="msg save-point">포인트
-                                        <span id="mileage" pricedata="total_milage">208</span>p</p>
+
                                 </dd>
                             </dl>
 
