--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -170,6 +170,12 @@ textarea {
   line-height: 1;
 }
 
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 strong,
 em {
   font-style: normal;
@@ -1511,4 +1517,12 @@ a:focus {
 #page-template .thumbnail-box {
   width: 250px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
+}
+
+#basket-toaster {
+  opacity: 1;
+  width: 100%;
+  padding-top: 5px !important;
+  height: 50px;
+
 }
