--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -11,6 +11,9 @@
     <meta name="naver-site-verification" content="e543b30ae873355f2c556f58b48ae7c95c1cea05">
     <title>배민찬 - 모바일 넘버원 반찬가게</title>
     <link rel="stylesheet" href="/main.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.10/handlebars.js"></script>
+
     {{#block "header"}}
     {{/block}}
 </head>
