--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -68,17 +68,17 @@
                                 </dt>
                                 <dd class="prd_thumb_price">
                                     <p class="selling-price">4,640<span class="won">원</span></p>
-                                    <p class="origin-price"><del>{{price}}원</del></p>
+                                    <p class="origin-price_{{id}}"><del>{{price}}원</del></p>
                                 </dd>
                                 <dd class="prd_to_basket">
                                     <div class="prd_account clearfix">
-                                        <label><input class="buy_cnt" type="text" name="amount" value="1" data-name="{{title}}" data-no="17435" data-price="" data-hash="H62C9" data-min="1" data-max="-1"></label>
+                                        <label><input class="buy_cnt_{{id}}" type="text" name="amount" value="1" data-name="{{title}}" data-no="17435" data-price="" data-hash="H62C9" data-min="1" data-max="-1"></label>
                                         <span>
-                                            <a href="#" title="수량 더하기" class="up">수량 더하기</a>
-                                            <a href="#" title="수량 빼기" class="down">수량 빼기</a>
+                                            <a href="#" title="수량 더하기" class="up" data-index="{{id}}">수량 더하기</a>
+                                            <a href="#" title="수량 빼기" class="down" data-index="{{id}}">수량 빼기</a>
                                         </span>
                                     </div>
-                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
+                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-index="{{id}}" data-hash="H62C9" data-price="4640">
                                       <span>담기</span>
                                     </button>
                                 </dd>
@@ -108,4 +108,5 @@
             </div>
         </div>
     </div>
+<script src="/js/basket.js"></script>
 {{/block}}
