--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -1512,3 +1512,13 @@ a:focus {
   width: 250px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
 }
+
+#basket-toaster.on{
+   opacity: 1 !important;
+   transition: opacity .5s;
+}
+
+#basket-toaster{
+  opacity: 0;
+  transition: opacity .5s;
+}
