--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -99,7 +99,7 @@
                         </p>
                         <a href="/cart" id="go_to_cart" class="go_to_basket">장바구니 이동 <span>&gt;</span></a>
                     </div>
-                    <div id="basket-toaster" class="tooltip" style="display: none;">
+                    <div id="basket-toaster" class="tooltip">
                         <i class="tooltip_arr"></i>
                         <span class="prd_name">상품</span>
                         담기완료
