배민찬, 장바구니 기능 구현중
- 메인페이지에서 수량을 키보드로 직접 입력하고 담기 버튼 클릭 시 우측 UI 갯수 표시 옆에 숫자 증가
- 장바구니 기능 관련 백엔드 구현 및 테스트 완료

--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -71,6 +71,7 @@
                                     <p class="origin-price"><del>{{price}}원</del></p>
                                 </dd>
                                 <dd class="prd_to_basket">
+                                    <input type="hidden" id="productId" value="{{id}}">
                                     <div class="prd_account clearfix">
                                         <label><input class="buy_cnt" type="text" name="amount" value="1" data-name="{{title}}" data-no="17435" data-price="" data-hash="H62C9" data-min="1" data-max="-1"></label>
                                         <span>
@@ -78,7 +79,7 @@
                                             <a href="#" title="수량 빼기" class="down">수량 빼기</a>
                                         </span>
                                     </div>
-                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
+                                    <button class="btn btn_gray prd_thumb_btn cart"data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
                                       <span>담기</span>
                                     </button>
                                 </dd>
@@ -108,4 +109,5 @@
             </div>
         </div>
     </div>
+<script type="module" src="/js/product.js"></script>
 {{/block}}
