--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -110,5 +110,5 @@
 {{/block}}
 {{#block "footer"}}
 <script src="/js/main.js"></script>
-<script type="module"  src="/js/products.js"></script>
+<script type="module" src="/js/detail/products.js"></script>
 {{/block}}
