--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -15,7 +15,7 @@
             <!--  상단 배너 -->
             <div id="tbb" class="top_banner_wrap" style="display: none;">
                 <a href="#" class="top_banner">페이지 상단 배너</a>
-                <a href="#" class="btn_close" title="닫기">닫기</a>
+                <a href="#" class="btn_cloprds_lstse" title="닫기">닫기</a>
             </div>
             <!-- //End 상단 배너 -->
             <!--  헤더영역 -->
