--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -3,6 +3,7 @@
 {{#block "header"}}
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/web/css/swiper/3.2.7/swiper.min.css">
 <link rel="stylesheet" type="text/css" href="https://cdn.bmf.kr/static/css/app.v-bdf170c3.css">
+<script src = "/js/cart.js"> </script>
 {{/block}}
 
 {{#block "contents"}}
@@ -56,13 +57,13 @@
                             <div class="imgthumb">
 	                              <img src="{{imgUrl}}" alt="">
 
-                                <a href="/product/{{id}}" ga_id="17435" ga_name="{{description}}">
+                                <a href="/product/{{productName}}" ga_id="17435" ga_name="{{description}}">
                                   <div class="thumb_badge"><span class="num">20</span><span class="unit">%</span></div>
                                 </a>
                             </div>
                             <dl class="prds_lst_info">
                                 <dt class="prd_tlt">
-                                    <a href="/product/{{id}}" ga_id="17435" ga_name="{{description}}">
+                                    <a href="/product/{{productName}}" ga_id="17435" ga_name="{{description}}">
                                         <span>{{description}}</span>
                                     </a>
                                 </dt>
@@ -78,7 +79,7 @@
                                             <a href="#" title="수량 빼기" class="down">수량 빼기</a>
                                         </span>
                                     </div>
-                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
+                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640" data-name="{{title}}">
                                       <span>담기</span>
                                     </button>
                                 </dd>
