--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -94,7 +94,7 @@
                     <a href="/products">밑반찬</a>
                     <ul class="sub-menu">
                         <li>
-                            <a href="#">무침</a>
+                            <a href="/products/1">무침</a>
                         </li>
                         <li>
                             <a href="#">나물무침</a>
@@ -306,6 +306,7 @@
     </nav>
 </section>
 
+<script src="/js/common.js"> </script>
 {{#block "contents"}}
 {{/block}}
 
