--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -94,7 +94,7 @@
                                                             <label>
                                                                 <input type="text" name="amount" value="1" class="buy_cnt">
                                                             </label>
-                                                            <span>
+                                                            <span id="amount_manager">
                                                                 <a href="#" title="수량 더하기" class="up">수량 더하기</a>
                                                                 <a href="#" title="수량 빼기" class="down">수량 빼기</a>
                                                             </span>
@@ -163,4 +163,6 @@
                 </div>
             </div>
         </div>
+
+<script src="/js/product.js" async defer> </script>
 {{/block}}
