feat: Doing cart front-end

--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -169,3 +169,8 @@
         </div>
     </div>
 {{/block}}
+
+{{#block "footer"}}
+<script src="/js/main.js"></script>
+<script src="/js/cart.js"></script>
+{{/block}}
