배민찬 장바구니 구현 - 반찬 데이터 삽입 및 장바구니 생성 구현 	- Cart : ApiCartController, CartService, CartRepository, Cart 추가 	- Basket : Basket, BasketRepository 추가 - 그 외 구현은 하지 못함

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -31,7 +31,7 @@
                                         class="top_detail_image">
                                     <i class="brd_box"></i>
                                     <div class="thumb_badge">
-                                        <span class="num">10</span>
+                                        <span class="amount">10</span>
                                         <span class="unit">%</span>
                                     </div>
                                 </div>
