--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -89,4 +89,5 @@
 {{#block "footer"}}
 <script src="/js/main.js"></script>
 <script src="/js/signin.js"></script>
+<script src="/js/merchandises.js"></script>
 {{/block}}
