--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -79,7 +79,8 @@
                                         </span>
                                     </div>
                                     <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
-                                      <span>담기</span>
+                                        <input type = hidden value="{{id}}">
+                                        <span>담기</span>
                                     </button>
                                 </dd>
                             </dl>
@@ -108,4 +109,7 @@
             </div>
         </div>
     </div>
+
+<script src="/js/main.js"></script>
+<script src="/js/merchandises.js"></script>
 {{/block}}
