--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -8,6 +8,7 @@
 
 {{#block "contents"}}
     <div id="container">
+        {{#cart}}
         <div class="content" id="content">
             <div id="loading" style="position: absolute; margin: 0px; border: 1px solid rgb(222, 222, 222); background-color: rgb(85, 85, 85); text-align: center; z-index: 2000; width: 980px; height: 884px; opacity: 0.8; display: none;">
                 <span style="color:white">
@@ -50,7 +51,7 @@
                             </tr>
                         </thead>
                         <tbody>
-
+                            {{#selectedItems}}
                             <tr class="cart_prd_list" cart_no="12585780" data-hash="I9D6D" data-subscription-flag="0" data-delivery-limit-periods-flag="1"
                                 data-delivery-limit="2018-07-19~2018-08-15">
                                 <td>
@@ -61,12 +62,12 @@
                                 </td>
                                 <td class="thumb">
                                     <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">
-                                        <img src="https://cdn.bmf.kr/_data/product/I9D6D/88bd9878ff327da7adc71a9f81e3488b.jpg">
+                                        <img src="{{product.imgUrl}}">
                                     </a>
                                 </td>
                                 <td class="left">
                                     <p class="title prd_name">
-                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">[집밥의완성] 공심채볶음 170g</a>
+                                        <a href="/shop/detail.php?hash=I9D6D&amp;cno=30011800">{{product.description}}</a>
                                     </p>
                                     <p class="soldout bf_red" style="display: none;">
                                         <strong class="soldout-text"></strong>
@@ -80,11 +81,11 @@
                                     </p>
                                 </td>
                                 <td>
-                                    <span cartdata="" id="productPrice">5,200</span>원</td>
+                                    <span cartdata="" id="productPrice">{{product.price}}</span>원</td>
                                 <td>
                                     <div class="prd_account">
                                         <label>
-                                            <input type="number" class="buy_cnt" min="1" max="999" value="4" data-quantity="4"
+                                            <input type="number" class="buy_cnt" min="1" max="999" value="{{count}}" data-quantity="4"
                                                 formnovalidate="">
                                         </label>
                                         <span>
@@ -95,7 +96,7 @@
                                     <button type="button" class="btn btn_white quantity_change_confirm">변경</button>
                                 </td>
                                 <td>
-                                    <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice">20,800</span>원</td>
+                                    <span cartdata="origin/sum_final_sell_prc" id="sumSalePrice">{{totalPrice}}</span>원</td>
                                 <td>
                                     <span class="once_only bf_red">정기배송 불가</span>
                                 </td>
@@ -103,7 +104,7 @@
                                     <a class="ico-delete delete_cart_item" style="cursor:pointer">삭제</a>
                                 </td>
                             </tr>
-
+                            {{/selectedItems}}
                         </tbody>
                     </table>
 
@@ -141,10 +142,10 @@
                             <dl class="price">
                                 <dt>상품 금액</dt>
                                 <dd>
-                                    <span pricedata="" id="salePrice">20,800</span>원</dd>
+                                    <span pricedata="" id="salePrice">{{totalSalesPrice}}</span>원</dd>
                                 <dt>배송비</dt>
                                 <dd>
-                                    <span pricedata="" id="shippingFee">2,500</span>원
+                                    <span pricedata="" id="shippingFee">{{shipmentPrice}}</span>원
                                     <p class="msg">40,000원 이상 구매 시 배송비 무료</p>
                                 </dd>
                             </dl>
@@ -152,7 +153,7 @@
                             <dl class="total">
                                 <dt>총 주문금액</dt>
                                 <dd>
-                                    <span class="number" pricedata="" id="totalPrice">23,300</span>
+                                    <span class="number" pricedata="" id="totalPrice">{{totalPrice}}</span>
                                     <span class="won">원</span>
                                     <p class="msg save-point">포인트
                                         <span id="mileage" pricedata="total_milage">208</span>p</p>
@@ -167,5 +168,6 @@
                 </div>
             </div>
         </div>
+        {{/cart}}
     </div>
 {{/block}}
