--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -78,7 +78,7 @@
                                             <a href="#" title="수량 빼기" class="down">수량 빼기</a>
                                         </span>
                                     </div>
-                                    <button class="btn btn_gray prd_thumb_btn cart" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
+                                    <button class="btn btn_gray prd_thumb_btn cart" data-id="{{id}}" data-role="add-to-cart-button" data-hash="H62C9" data-price="4640">
                                       <span>담기</span>
                                     </button>
                                 </dd>
