카트의 최신 데이터를 받을 수 있는 GET api 구현 및 물품 담기 버튼 구현
1. /products 담기 버튼 클릭시 POST api 호출 및 최신 카트 데이터를
기반으로 헤더와 사이드바의 카트 내 물품 갯수 표현 기능 구현
2. 현재 세션이 가지고 있는 카트 내 물품 데이터를 받는 GET api 구현

--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -367,6 +367,12 @@ a:focus {
   display: none;
 }
 
+#snb .menu li.cart a span {
+  font-weight: bold;
+  color: #2ac1bc;
+}
+
+
 #header {
   grid-area: header;
   display: flex;
